# PyBOM

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
Example/: Parts List.xlsx  SKA-100.xlsx  TR-01.xlsx  WH-01.xlsx
doc/src/: conf.py  index.rst
pybom/: BOM.py  __main__.py  browser.py  repl.py
tests/: conftest.py  test_bom.py  test_browser.py  test_cli.py  test_repl.py
